--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App BMI Calc</title>
+    <title>React App BMI Calc - test branch</title>
   </head>
   <body>
     <div id="root"></div>
