--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App BMI Calc - test branch</title>
-    <h1>changed bmi calce</h1>
+    <h1>updated BMI calc</h1>
   </head>
   <body>
     <div id="root"></div>
